# cutwidth-sat-encoding

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt
cmake/: AddGitSubmodule.cmake
data/: clause_map.csv  encoding.sat
source/: clause_map.csv  encoding  encoding.cpp  encoding.h  encoding.sat  graph.dgf  graph.dimacs  main  main.cpp  read_graph  read_graph.cpp  read_graph.h
src/: CMakeLists.txt  encoding.cpp  encoding.h  read_graph.cpp  read_graph.h
